--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,21 +11,23 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  bloc: ^8.0.1
+  bloc: ^8.1.2
   flutter_bloc: ^8.1.3
-  equatable: ^2.0.3
-  http: ^0.13.4
+  equatable: ^2.0.5
+  http: ^1.1.0
   flutter_modular: ^6.3.2
-  cupertino_icons: ^1.0.2
+  cupertino_icons: ^1.0.6
   intl: ^0.18.1
   cached_network_image: ^3.2.3
+  bloc_test: ^9.1.4
+  mocktail: ^1.0.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
 
-  flutter_lints: ^2.0.0
+  flutter_lints: ^2.0.3
 
 
 
