--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,8 @@ dependencies:
   cached_network_image: ^3.2.3
   bloc_test: ^9.1.4
   mocktail: ^1.0.0
+  modular_core: ^3.3.2
+  meta: ^1.9.1
 
 dev_dependencies:
   flutter_test:
