--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,10 +17,13 @@ dependencies:
   http: ^1.1.0
   flutter_modular: ^6.3.2
   cupertino_icons: ^1.0.6
-  intl: ^0.18.1
+  intl: ^0.18.0
   cached_network_image: ^3.2.3
   modular_core: ^3.3.2
   meta: ^1.9.1
+  flutter_localization: ^0.1.14
+
+
 
 dev_dependencies:
   flutter_test:
@@ -36,4 +39,3 @@ flutter:
 
 
   uses-material-design: true
-
