--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,9 @@ dependencies:
   modular_core: ^3.3.2
   meta: ^1.9.1
   flutter_localization: ^0.1.14
+  firebase_core: ^2.15.1
+  firebase_messaging: ^14.6.7
+  flutter_local_notifications: ^15.1.1
 
 
 
