--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,9 +22,13 @@ dependencies:
   modular_core: ^3.3.2
   meta: ^1.9.1
   flutter_localization: ^0.1.14
-  firebase_core: ^2.15.1
-  firebase_messaging: ^14.6.7
+  firebase_core: ^2.16.0
+  firebase_messaging: ^14.6.8
   flutter_local_notifications: ^15.1.1
+  firebase_analytics: ^10.5.0
+  firebase_auth: ^4.10.0
+  google_sign_in: ^6.1.5
+  email_validator: ^2.1.17
 
 
 
